EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Aviso_de_privacidad__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_privacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aviso de privacidad</label>
    <type>Checkbox</type>
</CustomField>