EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Correo_de_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_trabajo__c</fullName>
    <label>Correo de trabajo</label>
    <type>Email</type>
</CustomField>