EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Correo_institucional__c.field-meta.xml
<CustomField>
    <fullName>Correo_institucional__c</fullName>
    <label>Correo institucional</label>
    <type>Email</type>
</CustomField>