EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Correo_personal_2__c.field-meta.xml
<CustomField>
    <fullName>Correo_personal_2__c</fullName>
    <label>Correo personal 2</label>
    <type>Email</type>
</CustomField>