EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Correo_personal_3__c.field-meta.xml
<CustomField>
    <fullName>Correo_personal_3__c</fullName>
    <label>Correo personal 3</label>
    <type>Email</type>
</CustomField>