EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Detalle_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_Origen__c</fullName>
    <label>Detalle de Origen</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Correo Electrónico</fullName>
            </value>
            <value>
                <fullName>Whats App</fullName>
            </value>
            <value>
                <fullName>Chat sitio Web</fullName>
            </value>
            <value>
                <fullName>Chat Instagram</fullName>
            </value>
            <value>
                <fullName>Chat Facebok</fullName>
            </value>
            <value>
                <fullName>Contáctanos ECCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>