EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Gestión</fullName>
            </value>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>No Contactado</fullName>
            </value>
            <value>
                <fullName>Contactado</fullName>
            </value>
            <value>
                <fullName>No Válido</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>