EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/hed__External_Id__c.field-meta.xml
<CustomField>
    <fullName>hed__External_Id__c</fullName>
    <description>An optional external ID that&apos;s unique to the Lead.</description>
    <externalId>true</externalId>
    <inlineHelpText>Un Id. externo opcional que es exclusivo para el prospecto.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>