EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/hed__Most_Recent_School__c.field-meta.xml
<CustomField>
    <fullName>hed__Most_Recent_School__c</fullName>
    <description>The school the Lead is currently attending or has most recently attended.</description>
    <inlineHelpText>La escuela a la que está asistiendo el prospecto en estos momentos o que asistió más recientemente.</inlineHelpText>
    <label>Most Recent School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>