EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/M_vil_1__c.field-meta.xml
<CustomField>
    <fullName>M_vil_1__c</fullName>
    <label>Móvil 1</label>
    <type>Phone</type>
</CustomField>