EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/M_vil_2__c.field-meta.xml
<CustomField>
    <fullName>M_vil_2__c</fullName>
    <label>Móvil 2</label>
    <type>Phone</type>
</CustomField>