EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/M_vil_3__c.field-meta.xml
<CustomField>
    <fullName>M_vil_3__c</fullName>
    <label>Móvil 3</label>
    <type>Phone</type>
</CustomField>