EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Motivo_de_descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_descarte__c</fullName>
    <label>Motivo de descarte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por descarte por el numero de incidencaias (14 tareas) se descarta la oportunidad con motivo de se llegó al límite de tareas</fullName>
            </value>
            <value>
                <fullName>Ingreso a otra Universidad, con un campo para seleccionar cual no obligatorio</fullName>
            </value>
            <value>
                <fullName>Ya no tiene interés en ingresar a la institución</fullName>
            </value>
            <value>
                <fullName>Programa no se ajusta a su bnecesidad (relacionado a la oferta académica)</fullName>
            </value>
            <value>
                <fullName>No tenemos programa de interés (ralacionado a la oferta académica</fullName>
            </value>
            <value>
                <fullName>No cumple con certificado de nivel anterior</fullName>
            </value>
            <value>
                <fullName>Hace validos los derechos ARCO (ya no quiere ser contactado)</fullName>
            </value>
            <value>
                <fullName>Llamadas de broma</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Factores económicos</fullName>
            </value>
            <value>
                <fullName>Embarazo</fullName>
            </value>
            <value>
                <fullName>Jornada no disponible (se refiere al turno desmertino, matutino)</fullName>
            </value>
            <value>
                <fullName>No le interesa la modalidad</fullName>
            </value>
            <value>
                <fullName>Motivos personales</fullName>
            </value>
            <value>
                <fullName>No esta deacuerdo con homologación (se refiere a que no acepto el plan de equivalencias)</fullName>
            </value>
            <value>
                <fullName>No obtuvo beca adecuada</fullName>
            </value>
            <value>
                <fullName>No obtuvo financiamiento</fullName>
            </value>
            <value>
                <fullName>No tuvo permiso en el trabajo (no me dieron el tiempo disponible)</fullName>
            </value>
            <value>
                <fullName>No quizo informar el motivo</fullName>
            </value>
            <value>
                <fullName>No se ajusta a la jornada</fullName>
            </value>
            <value>
                <fullName>No tiene capacidad de pago</fullName>
            </value>
            <value>
                <fullName>No tiene tiempo</fullName>
            </value>
            <value>
                <fullName>Precio muy alto</fullName>
            </value>
            <value>
                <fullName>Problemas de salud</fullName>
            </value>
            <value>
                <fullName>Problemas familiares</fullName>
            </value>
            <value>
                <fullName>Siguiente corte (cuando cambia de periodo)</fullName>
            </value>
            <value>
                <fullName>Viaje programado</fullName>
            </value>
            <value>
                <fullName>Aspirante gestionado por la universidad (no se puede contactar, porque alguien de la universidad esta llevando su proceso)</fullName>
            </value>
            <value>
                <fullName>Es alumno activo/reingreso</fullName>
            </value>
            <value>
                <fullName>No hay sede en la zona o región en donde vive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>