EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Nivel_de_estudios_a_cursar__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_estudios_a_cursar__c</fullName>
    <label>Nivel de estudios a cursar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guardería</fullName>
            </value>
            <value>
                <fullName>Kinder</fullName>
            </value>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Bachillerato Técnico</fullName>
            </value>
            <value>
                <fullName>Preparatoria</fullName>
            </value>
            <value>
                <fullName>Licenciatura</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
            <value>
                <fullName>En línea Licenciatura</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>