EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Nombre_de_padre_o_tutor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_padre_o_tutor__c</fullName>
    <label>Nombre de padre o tutor</label>
    <length>55</length>
    <type>Text</type>
</CustomField>