EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/rea_de_estudio__c.field-meta.xml
<CustomField>
    <fullName>rea_de_estudio__c</fullName>
    <label>Área de estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>