EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>