EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Trabajo__c</fullName>
    <label>Trabajo</label>
    <type>Phone</type>
</CustomField>