EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Lead/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <label>Tutor</label>
    <type>Phone</type>
</CustomField>